[package]
name = "http_forward_proxy"
version = "0.1.0"
authors = ["alesiong <ypf7.10@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
clap = "2.33"
hyper-proxy = { git = "https://github.com/alesiong/hyper-proxy.git", features = [], default-features = false }