[package]
name = "http_forward_proxy"
version = "0.1.0"
authors = ["alesiong <ypf7.10@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["macros"] }
clap = { version = "2.33", features = [], default-features = false }
hyper-proxy = { git = "https://github.com/alesiong/hyper-proxy.git", features = ["rustls"], default-features = false }

[features]
default = ["rustls"]
rustls = ["hyper-proxy/rustls"]
tls = ["hyper-proxy/tls"]
